Add date to the model
- Updated controller and services accordingly